Revision history for Perl extension OrePAN2

{{$NEXT}}

0.40 2015-07-14T21:34:16Z
    - Add previously documented but apparently never implemented "simple" flag
      to orepan2-indexer script (oalders)

0.39 2015-07-03T21:23:23Z
    - Globally enable dev versions (Chris Weyl).  See discussion at
      https://github.com/tokuhirom/OrePAN2/pull/36
    - Use a template for tempdir, for easier identification (Chris Weyl)

0.38 2015-03-19T03:24:55Z
    - Bump minimum version of Moo to avoid tester failures (oalders)

0.37 2015-03-18T02:51:18Z

    - [BETA] author attribute accepts a code reference,
      so that you can calculate author whenever injecting distributions (skaji)

0.36 2015-02-09T21:06:09Z
    - Add OrePAN2::Auditor (oalders)

0.35 2014-12-01T20:26:54Z

    - Revert back to MetaCPAN version (from version_numified) (oalders)

0.34 2014-12-01T14:21:15Z

    - If two packages have the same version, the one which is last in will be preferred (oalders)
    - OrePAN2::Indexer::make_index() now returns an OrePAN2::Index object (oalders)

0.33 2014-11-22T00:38:07Z

    - Add IO::Socket::SSL to dependencies (Ivan Bessarabov)

0.32 2014-11-18T03:37:27Z

    - Remove MetaCPAN::API, which is now deprecated (oalders)
    - Use version_numified when getting provides from MetaCPAN (oalders)
    - Doc updates (Ivan Bessarabov)
    - Fixed `--author` in orepan2-inject

0.31 2014-09-08T19:51:08Z

    - Fix some undef warnings (miyagawa)
    - Add an option to use MetaCPAN for provides lookups (oalders)
    - Update minimum version of Archive::Extract to suppress warnings
      (tokuhirom)

0.30 2014-05-04T23:54:02Z

    - Use $self->{author} when the option is not provided (Ichito Nagata)

0.29 2014-03-05T06:06:48Z

    - Index new version instead of die.

0.28 2014-02-28T09:00:20Z

    - Added orepan2-gc, orepan2-merge-index

0.27 2014-02-28T07:58:02Z

    - Fixed caching bug.

0.26 2014-02-28T07:44:18Z

    - [EXPERIMENTAL] Added experimental cache mode.